--- a/config.json.example
+++ b/config.json.example
@@ -1,3 +1,3 @@
 {
-  "slack_webhook_url": "https://hooks.slack.com/services/XXXXXXXXX/XXXXXXXXX/xxxxxxxxxxxxxxxxxxxxxxxx"
+  "encrypted_webhook_url": "<KMS Encrypted Slack Webhook URL>"
 }
